syntax="proto2";

package com.book.proto;

option java_package = "com.book.proto";
option java_outer_classname="SubscribeReqProto";
option java_multiple_files = true;

message SubscribeReq{
    required int32 subReqID = 1;
    required string userName = 2;
    required string productName = 3;
    required string address = 4;
}