syntax="proto2";

package com.book.proto;

option java_package = "com.book.proto";
option java_outer_classname="SubscribeRespProto";
option java_multiple_files = true;

message SubscribeResp{
    required int32 subReqID = 1;
    required int32 resqCode = 2;
    required string desc = 3;
}